<resources>
    <string name="app_name">FinBoost</string>
    <string name="ob_title_1">Financial Growth</string>
    <string name="ob_desc_1">Boost your financial growth using Ai technology</string>
    <string name="ob_title_2">Financial Literation</string>
    <string name="ob_desc_2">Get to know more about financial with article that we provide</string>
    <string name="welcome_title">Konsultasikan masalah finansial \nanda dengan \nkami</string>
    <string name="welcome_desc">Tingkatkan pertumbuhan \nfinansial Anda dengan \nteknologi Ai dan pakar keuangan</string>
    <string name="skip">SKIP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up_title">Buat akun \nmu terlebih dahulu yaa</string>
    <string name="sign_in_title">Selamat Datang \nKembali di Finboost</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="gender">Pilih Gender</string>
    <string name="role">Pilih Role</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No Handphone</string>
    <string name="umur">Umur</string>
    <string name="home_title_content">RAIH FINANCIAL GROWTH \nDENGAN LAYANAN KAMI</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="dumy_detail_text">Wafie Abiyya El Hanief, CFP, ChFC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Tentang Expert</string>
    <string name="dummy_desc">Wafie adalah seoarang expert dalam bidang financial. Dia merupakan lulusan Ekonomi Universitas UI dan Manajemen ITB. Dengan segudang pengalaman nya di bidang financial, Waf</string>
    <string name="profile_expert">Profile Expert</string>
    <string name="jadwal_tersedia">Jadwal Tersedia</string>
    <string name="lihat_detail_expert">Lihat Detail Expert</string>
    <string name="notif">Notifikasi</string>
    <string name="bahasa">Bahasa</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ubah_data">Ubah Data</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="status_pernikahan">Status Pernikahan</string>
    <string name="education">Pendidikan Terakhir</string>
    <string name="work_status">Pekerjaan Saat ini</string>
    <string name="jenis_asuransi">Jenis Asuransi</string>
    <string name="income_per_month">Pendapatan Per Bulan</string>
    <string name="unauthorized">Anda belum login, silahkan login</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="riwayat_pendidikan">Riwayat Pendidikan</string>
    <string name="financial_expert">Financial Expert</string>
    <string name="on_board_3">Consult your financial problem with financial expert</string>
    <string name="deskripsi_diri">Deskripsi Diri</string>
    <string name="dummy_rp">Rp5000.000</string>
    <string name="certified">CFP Certified</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="regis">registrasi</string>
    <string name="has_account">Sudah punya akun?</string>
    <string name="privacy">Kebijakan Privasi ini mengatur cara FinBoost mengumpulkan, menggunakan, memelihara, dan mengungkapkan informasi identitas pribadi yang dikumpulkan dari pengguna situs web FinBoost yang berlokasi di www.finboost.com (Situs) termasuk Aplikasi Seluler FinBoost yang terdaftar di App Store dan Google Play Store, atau dikumpulkan melalui layanan jejaring sosial kami (bersama dengan Situs, Layanan). Dengan mengakses dan/atau menggunakan layanan FinBoost, Pengguna menyatakan bahwa setiap data Pengguna adalah sah, dan Pengguna menyetujui FinBoost untuk memperoleh, mengumpulkan, menyimpan, mengelola dan menggunakan data tersebut sebagaimana tercantum dalam Kebijakan Privasi dan Syarat dan Ketentuan FinBoost.FinBoost dari waktu ke waktu berhak memperbaharui Kebijakan Privasi ini agar tetap relevan dan terkini dengan perubahan teknologi, hukum yang berlaku, inovasi FinBoost yang terus berkembang dan kebutuhan Pengguna, dan sebaiknya Anda memeriksa halaman ini secara berkala untuk memastikan Anda sudah mengetahui perubahan apa pun.
        FinBoost melindungi seluruh informasi yang diberikan Pengguna pada saat Pengguna menggunakan seluruh Layanan.</string>
    <string name="finboost">FinBoost</string>
</resources>