<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/welcome_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv_welcome_desc"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:text="@string/welcome_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_desc">

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:backgroundTint="@color/main"
            android:background="@drawable/button_filled"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>