<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="40dp"
    android:paddingVertical="30dp"
    android:orientation="vertical"
    tools:context=".ui.home.ExpertProfileDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_sb"
            android:textSize="20sp"
            android:text="@string/about"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teacher"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:fontFamily="@font/opensans_sb"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/tv_edu_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_pendidikan"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shield_tick"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/certified"
                android:fontFamily="@font/opensans_sb"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescExpert"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat_reg"
            android:layout_height="wrap_content"
            android:text="@string/dummy_desc"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btnConsult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Konsultasi Dengan Expert"
            android:background="@drawable/image_button_bg"
            />
    </LinearLayout>


</ScrollView>