<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".auth.signin.SignInActivity">

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:padding="20dp"
        android:text="@string/sign_in_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_bg"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_title"
        app:layout_constraintVertical_bias="0.214"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_get_started"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_filled"
            android:text="@string/sign_in"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="90dp"
            android:text="Belum Punya akun? Sign Up "
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>